--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <!-- ASSIGN OUR ANGULAR MODULE -->
-<html ng-app="UsvaHomeApp">
+<html>
 <head>
 	<!-- META -->
 	<meta charset="utf-8">
@@ -9,10 +9,22 @@
 
 	<title>Simple Home Automation</title>
 
-	<!-- SCROLLS -->
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"><!-- load bootstrap -->
+	<!-- SPELLS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0/angular-sanitize.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script> -->
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <script src="js/ng-radial-gauge-dir.js"></script>
+    
+	<script src="js/controllers/main.js"></script>     <!-- load up our controller -->
+	<script src="js/services/sensors.js"></script>     <!-- load our sensors service stub for REST API -->
+	<script src="js/services/relays.js"></script>      <!-- load our relays service stub for REST API -->
+	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-		
+
 	<style>
 		html 					{ overflow-y:scroll; }
 		body 					{ padding-top:50px; }
@@ -20,49 +32,28 @@
 		#relays-list 			{ margin-bottom:30px; }
 		#todo-form 	 			{ margin-bottom:50px; }
 	</style>
-
-	<!-- SPELLS -->
-	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script><!-- load angular -->
-	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.2/raphael-min.js"></script>
-	<script type="text/javascript" src="js/kuma-gauge.jquery.js"></script>
-	<script src="js/controllers/main.js"></script>     <!-- load up our controller -->
-	<script src="js/services/sensors.js"></script>     <!-- load our sensors service stub for REST API -->
-	<script src="js/services/relays.js"></script>      <!-- load our relays service stub for REST API -->
-
-
 </head>
-<!-- SET THE CONTROLLER -->
-<body>
+
+
+<body ng-app="UsvaHomeApp">
+	
 	<div class="container">
 
 		<!-- HEADER AND TODO COUNT -->
 		<div class="page-header">
-			<h1><img src="./images/home.gif"  width="256" height="256"></img>Home App</span></h1>
+			<h1><img src="./images/home.gif"  width="100" height="100"></img>Home App</span></h1>
 		</div>
 
 		<!-- SENSORS LIST -->
 		<div id="sensors-list" class="panel panel-default" ng-controller="sensorsController">
 			<div class="panel-heading">Activated Sensors</div>
 			
-			<div class="panel-body">  
-			    <tbody style="font-size: 12px">
-                    <tr>
-				        <!-- LOOP OVER THE SENSORS IN $scope.sensors -->
-				        <div class="checkbox" ng-repeat="sensor in sensors">
-					        <td>{{ sensor.name }}</td>
-					        <td>
-					        	<!-- generate a slot for gauge -->
-					        	<div ng-class="{{ sensor.name | generateGaugeDiv }}"></div>
-					        </td>
-				        </div>
-				        <!-- LOOP OVER THE SENSORS IN $scope.sensors IN ORDER TO POPULATE DATA AND ACTIVATE CLIENT SIDE REFRESHER -->
-				        <div class="checkbox" ng-repeat="sensor in sensors">
-				        	<div ng="{{ writeGauge(sensor) }}"></div>
-				        </div>
-				        <!-- <timer interval="2000" ng="{{getSensors}}"></timer> -->
-					</tr>
-				</tbody>
+			<div class="panel-body">
+				<!-- LOOP OVER THE SENSORS IN $scope.sensors -->
+				<div ng-repeat="sensor in sensors">
+					<div>{{ sensor.name }}</div>
+					<div width="50%" ng-radial-gauge ranges="sensor.ranges" value="sensor.value" value-unit="sensor.unit" precision="sensor.precision" lower-limit="sensor.lowerLimit" upper-limit="sensor.upperLimit"></div>
+				</div>
 			</div>
 		</div>
 		
@@ -75,13 +66,7 @@
     				<!-- LOOP OVER THE RELAYS IN $scope.relays -->
     				<div class="checkbox" ng-repeat="relay in relays">
     					<label>
-    						<div ng-if="relay.value">
-                                <input type="checkbox" ng-click="put(relay.name, false)" checked>
-                            </div>
-                            <div ng-if="!relay.value">
-                                <input type="checkbox" ng-click="put(relay.name, true)">
-                            </div>
-    						
+                            <input type="checkbox" ng-model="relay.value" ng-change="put(relay.name, relay.value)">
     						{{ relay.name }}
     					</label>
     				</div>
@@ -91,14 +76,8 @@
 
 		<div class="text-center text-muted">
 			<p>A demo by <a href="https://ide.c9.io/laitinenp">Usva Software Co</a>.</p>
-			<p>Read the <a href="https://ide.c9.io/laitinenp">tutorial</a>.</p>
+			<p>View the code at <a href="https://github.com/laitinenp/zigbee">github.com</a>.</p>
 		</div>
-
 	</div>
-
-	<!-- WRITE GAUGE VALUES TO THE SLOTS -->
-	<script>
-		//angular.element(document.getElementById('sensorsController')).scope().writeGauges();
-	</script>
 </body>
 </html>
